# oflow

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI_INTEGRATION.md  IMPLEMENTATION_STATUS.md  IMPROVEMENTS.md  INSTALLATION.md  LICENSE  Makefile  PROJECT_CLEANUP_SUMMARY.md  README.md  RECOMMENDED_APPROACH.md  TYPESCRIPT_MIGRATION_ANALYSIS.md  benchmark.py  benchmark_regex.py  brain.py  brain_search.py  cortex-osd.py  cortex.py  install.sh  oflow-backend.spec  oflow-osd.py  oflow.py  omarchyflow  omarchyflow.py  pyproject.toml  screen.py  setup.sh  test_modes.py  test_suite.py  test_system.py  waybar-cortex-style.css  waybar-oflow-style.css  waybar-oflow.css  waybar-oflow.jsonc
.github/workflows/: ci.yml  release.yml
aur/: .SRCINFO  PKGBUILD  cortex.install  oflow.install
cortex-ui/: index.html  package-lock.json  package.json
cortex-ui/src/: App.tsx  index.css
cortex-ui/src-tauri/: Cargo.toml  tauri.conf.json
cortex-ui/src-tauri/capabilities/: default.json
cortex-ui/src-tauri/src/: lib.rs  main.rs
cortex-ui/src/components/: AskView.tsx  Dashboard.tsx  DreamsView.tsx  InitiativesView.tsx  SettingsView.tsx  VaultView.tsx
cortex-ui/src/components/ui/: markdown.tsx
cortex-ui/src/lib/: api.ts
docs/: LAUNCH.md  architecture.md  gemini-integration.md  hotkeys.md  systemd.md
oflow-macos/: .gitignore  Makefile  README.md  oflow_macos.py  pyproject.toml  requirements.txt
oflow-macos/experimental/launchd/: com.oflow.agent.plist
oflow-ui/: CONTRIBUTING.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
oflow-ui/src/: App.tsx
oflow-ui/src-tauri/: Cargo.toml  tauri.conf.json
oflow-ui/src-tauri/capabilities/: default.json
oflow-ui/src-tauri/resources/: oflow-backend.sh
oflow-ui/src-tauri/resources/backend/: oflow.py
oflow-ui/src-tauri/src/: error.rs  lib.rs  main.rs  socket_client.rs
oflow-ui/src/components/: Dashboard.tsx  DreamsView.tsx  HistoryView.tsx  JournalView.tsx  SettingsView.tsx
oflow-ui/src/components/ui/: toast.tsx
oflow-ui/src/lib/: api.ts
omarchyflow-ui/: CONTRIBUTING.md  README.md  index.html  package-lock.json  package.json
omarchyflow-ui/src/: App.tsx
omarchyflow-ui/src-tauri/: Cargo.toml  tauri.conf.json
omarchyflow-ui/src-tauri/capabilities/: default.json
omarchyflow-ui/src-tauri/src/: error.rs  lib.rs  socket_client.rs
omarchyflow-ui/src/components/: Dashboard.tsx  HistoryView.tsx  SettingsView.tsx
omarchyflow-ui/src/lib/: api.ts
scripts/: build-combined.py  build-sidecar.sh  cortex-ctl  cortex-hotkey  dev.sh  oflow-ctl  setup-machine.sh  test-combined.sh
tests/: conftest.py  test_audio.py  test_groq_transcription.py  test_hallucination.py  test_integration.py  test_legacy.py  test_robustness.py  test_spoken_actions.py  test_text_processor.py
