[project]
name = "oflow"
version = "0.3.0"
description = "Voice dictation for Hyprland/Wayland with Groq Whisper"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "CryptoB1", email = "cryptob1@users.noreply.github.com" }
]
maintainers = [
    { name = "CryptoB1", email = "cryptob1@users.noreply.github.com" }
]
keywords = ["voice", "dictation", "hyprland", "wayland", "stt", "speech-to-text", "groq", "whisper"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Text Processing",
]
requires-python = ">=3.11"
dependencies = [
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.7.0",
]

[project.urls]
Homepage = "https://github.com/CryptoB1/oflow"
Repository = "https://github.com/CryptoB1/oflow"
Issues = "https://github.com/CryptoB1/oflow/issues"
Discussions = "https://github.com/CryptoB1/oflow/discussions"

[project.scripts]
oflow = "oflow:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["oflow.py"]

[tool.hatch.build.targets.sdist]
only-include = [
    "oflow.py",
    "tests",
    "docs",
    "README.md",
    "LICENSE",
    ".env.example",
    "setup.sh",
    "Makefile",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (require API keys)",
    "slow: Slow tests (real API calls)",
]
addopts = "-m unit -v"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.coverage.run]
source = ["oflow"]
omit = ["tests/*", ".venv/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
