[package]
name = "oflow-ui"
version = "0.2.0"
description = "Voice dictation UI for oflow - Wispr Flow alternative for Linux"
authors = ["CryptoB1 <cryptob1@users.noreply.github.com>"]
license = "MIT"
repository = "https://github.com/CryptoB1/oflow"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "oflow_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tokio = { version = "1", features = ["net", "io-util", "time", "sync"] }
thiserror = "1.0"
dirs = "5"
